2009-06-11  John W. Eaton  <jwe@octave.org>

	* octave.cc: Keep long options alphabetized.

	* display.h (display_info::no_window_system): New static function.
	(display_info::display_info, display_info::init,
	display_info::instance_ok): New argument, QUERY.
	(display_info::init): Skip query if QUERY is false.

	* octave.cc (long_opts, octave_main): Handle --no-window-system option.
	(NO_WINDOW_SYSTEM_OPTION): New defined value.
	(usage_string, verbose_usage): Mention --no-window-system option.

2009-06-11  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (octave_class::subsref): Set up proper nargout for call to subsref
	method.
	* ov-class.cc (octave_class::subsref): Unpack cs-list and setup nargin
	for call to subsasgn.

2009-06-10  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.cc (octave_base_value::numel (const octave_value_list&),
	octave_base_value::size): New virtual methods.
	* ov-base.h: Declare them.
	* ov.h (octave_value::numel (const octave_value_list&)): New method.
	(octave_value::size): Forward to octave_base_value.
	* ov-class.cc (octave_class::numel (const octave_value_list&),
	octave_base_value::size): New method overrides.
	* ov-class.h: Declare them.
	* pt-idx.cc (tree_index_expression::lvalue): Rewrite.
	* data.cc (Fnumel): Allow indexed query.

2009-06-10  John W. Eaton  <jwe@octave.org>

	* pt-fcn-handle.cc (tree_anon_fcn_handle::dup): Don't convert to
	tree_constant object here.  Do inherit from current symbol table
	scope and context.  New test.

	* lex.l	(handle_identifier): Set lexer_flags.looking_for_object_index
	false if identifier is a keyword.
	({IDENT}{S}*): Don't set lexer_flags.looking_for_object_index here.

2009-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* octave.cc (octave_main): Call initialize_command_input
	conditionally. Move line_editing update in front of it.
	Call command_editor::force_default_editor if not line_editing.

2009-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Flog2): Fix tests.
