@@ -487,11 +487,8 @@ octave_cell::sort (Array<octave_idx_type> &sidx, octave_idx_type dim,
 
       tmp = tmp.sort (sidx, dim, mode);
 
-      // We do it the hard way to auto-create the result's cache
-      octave_cell *result = new octave_cell (Cell (tmp));
-      result->cellstr_cache = tmp;
-
-      retval = result;
+      // We already have the cache.
+      retval = new octave_cell (tmp);
     }
   else
     error ("sort: only cell arrays of character strings may be sorted");
