@@ -1,3 +1,7 @@
+2009-06-12  Jaroslav Hajek  <highegg@gmail.com>
+
+	* ov-cell.cc (octave_cell::sort (Array<octave_idx_type>&)): Simplify.
+
 2009-06-11  John W. Eaton  <jwe@octave.org>
 
 	* octave.cc: Keep long options alphabetized.
